--- a/themes/pharm_theme/pharm_theme.libraries.yml
+++ b/themes/pharm_theme/pharm_theme.libraries.yml
@@ -26,7 +26,7 @@ global:
     theme:
       https://stackpath.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css: {}
       node_modules/normalize.css/normalize.css: {}
-      //cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css: {}
+      //cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css: {}
       dist/css/timeline.css: {}
       dist/css/sidebar.css: {}
       dist/css/jquery.fancybox.css: {}
